@@ -1,0 +1,14 @@
+
+.*
+
+
+Disassembly of section \.text:
+
+0*10000000 <\.f>:
+ *10000000:	48 00 00 05 	bl      10000004 <\.g>
+
+0*10000004 <\.g>:
+ *10000004:	4e 80 00 20 	bl?r
+
+0*10000008 <__start>:
+ *10000008:	4b ff ff f9 	bl      10000000 <\.f>
