@@ -1,0 +1,5 @@
+	.extern	.f
+	.globl	__start
+	.csect	__start[PR]
+__start:
+	bl	.f
